# brainwave-backend

./: .gitignore  README.md  pyproject.toml
deploy/: .bumpversion.cfg  Dockerfile  deploy.sh  local_test.sh
deploy/SQL/: flyway.toml
deploy/SQL/migrations/: V1.1__create_users_table.sql  V1.2__create_admin_model_tables.sql  V1.3__update_category_schema.sql  V1.4__create_game_table.sql  V1.5__resolve_game_issues.sql  V1.6__add_column_category.sql  V2.1__create_wa_history_table.sql  V2.2__add_hindi_message_colums.sql
src/: main.py
src/auth/: base.py  user_auth.py
src/client/: database.py  firebase.py  ingestion.py  whatsapp.py
src/client/legal_help/: __init__.py  chatbot.py
src/client/legal_help_hi/: __init__.py  chatbot.py  config.py  translate.py
src/client/model/: __init__.py  chatbot.py  config.py  qa.py  retriever.py
src/client/model/data/md_files/: Attorney General of India.md  COMPTROLLER AND AUDITOR GENERAL OF INDIA.md  Council of Ministers States.md  Council of Ministers Union.md  Legislative Procedure States.md  Legislative Procedure Union.md  Officers of Parliament.md  Officers of the State Legislature.md  Procedure Generally States.md  (+14 more)
src/client/model_hi/: __init__.py  chatbot.py  config.py  translate.py
src/client/tts_model/: __init__.py  model.py
src/db/: base.py  category.py  game.py  message.py  question.py  user.py  user_question.py  wa_history.py
src/router/: game.py  message.py  user.py
src/schema/: game.py  message.py  user.py  whatsapp.py
src/service/: game.py  message.py  user.py  whatsapp.py
src/utils/: client.py
(+2 files in other folders)
