[tool.poetry]
name = "brainwave-hackathon"
version = "0.2.0-dev3"
description = ""
authors = ["ATISHAY JAIN <atishayj.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2, <3.13"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
firebase-admin = "^6.5.0"
pydantic = "^2.9.0"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
google-generativeai = "^0.7.2"
google = "^3.0.0"
langchain = "^0.3.0"
openai = "^1.47.1"
faiss-cpu = "^1.8.0.post1"
tiktoken = "^0.7.0"
langchain-community = "^0.3.0"
unstructured = "^0.15.13"
langchain-openai = "^0.2.0"



[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
bumpversion = "^0.6.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
